--- a/agenda/gtd.org
+++ b/agenda/gtd.org
@@ -1,5 +1,14 @@
-* Todos                                                            :一个目标:
+* Workspace
+
+** STARTED [#B] [book]linux 命令
+   DEADLINE: <2021-09-09 周四 11:30> SCHEDULED: <2021-09-09 周四 10:30>
+   :LOGBOOK:
+   CLOCK: [2021-09-09 周四 10:34]--[2021-09-09 周四 10:59] =>  0:25
+   :END:
   
+  [2021-09-09 周四 10:33]
+
+
 * 2021  
 ** 9.1
 *** DONE html5
