--- a/agenda/gtd.org
+++ b/agenda/gtd.org
@@ -1,13 +1,25 @@
 * Workspace
 
-** STARTED [#B] [book]linux 命令
-   DEADLINE: <2021-09-09 周四 11:30> SCHEDULED: <2021-09-09 周四 10:30>
+** DONE STARTED [#B] [book]linux 命令
+   CLOSED: [2021-09-11 六 05:21] DEADLINE: <2021-09-09 周四 11:30> SCHEDULED: <2021-09-09 周四 10:30>
    :LOGBOOK:
+   CLOCK: [2021-09-10 五 19:40]--[2021-09-10 五 20:06] =>  0:26
+   CLOCK: [2021-09-10 五 19:02]--[2021-09-10 五 19:27] =>  0:25
    CLOCK: [2021-09-09 周四 10:34]--[2021-09-09 周四 10:59] =>  0:25
    :END:
   
   [2021-09-09 周四 10:33]
 
+** STARTED [#B] [book]thinkphp
+   SCHEDULED: <2021-09-11 六>
+   :LOGBOOK:
+   CLOCK: [2021-09-11 六 07:34]
+   CLOCK: [2021-09-11 六 06:57]--[2021-09-11 六 07:22] =>  0:25
+   CLOCK: [2021-09-11 六 06:08]--[2021-09-11 六 06:33] =>  0:25
+   CLOCK: [2021-09-11 六 05:23]--[2021-09-11 六 05:48] =>  0:25
+   :END:
+   
+  [2021-09-11 六 05:21]
 
 * 2021  
 ** 9.1
@@ -21,7 +33,7 @@
     CLOSED: [2021-09-08 三 07:42] SCHEDULED: <2021-09-07 周二>
    
     - State "DONE"       from "TODO"       [2021-09-08 三 07:42]
-*** STARTED [看书]学习时间管理
+*** STARTED [book]学习时间管理
     DEADLINE: <2021-09-08 三 20:10> SCHEDULED: <2021-09-08 三 19:40>
     :LOGBOOK:
     CLOCK: [2021-09-08 三 20:01]--[2021-09-09 四 06:15] => 10:14
