--- a/agenda/gtd.org
+++ b/agenda/gtd.org
@@ -13,13 +13,23 @@
 ** STARTED [#B] [book]thinkphp
    SCHEDULED: <2021-09-11 六>
    :LOGBOOK:
-   CLOCK: [2021-09-11 六 07:34]
+   CLOCK: [2021-09-11 六 07:34]--[2021-09-11 周六 08:38] =>  1:04
    CLOCK: [2021-09-11 六 06:57]--[2021-09-11 六 07:22] =>  0:25
    CLOCK: [2021-09-11 六 06:08]--[2021-09-11 六 06:33] =>  0:25
    CLOCK: [2021-09-11 六 05:23]--[2021-09-11 六 05:48] =>  0:25
    :END:
    
   [2021-09-11 六 05:21]
+
+** STARTED [#B] [book] Python
+   SCHEDULED: <2021-09-11 周六 08:40>
+   :LOGBOOK:
+   CLOCK: [2021-09-11 周六 16:41]--[2021-09-11 周六 17:06] =>  0:25
+   CLOCK: [2021-09-11 周六 15:10]--[2021-09-11 周六 15:35] =>  0:25
+   CLOCK: [2021-09-11 周六 08:38]--[2021-09-11 周六 09:03] =>  0:25
+   :END:
+  
+  [2021-09-11 周六 08:37]
 
 * 2021  
 ** 9.1
