--- a/product/computer/language/python.org
+++ b/product/computer/language/python.org
@@ -1,11 +1,19 @@
-#+TITLE: Python 
+#+TITLE: Python3 
 #+DATE: 2021-08-29T05:56:47+08:00
 
 
-* 物与动物
-** 物
-*** 数字 
-*** 字符串 
+* 语言
+** 数据类型
+*** Number
+   - int
+   - long
+   - float
+   - complex
+#+begin_src python
+   print(complex(12,3))
+   print(12+3j)
+#+end_src
+*** String
     - len()
     - s[:-1]
     - s[0:3]
@@ -16,29 +24,170 @@
     - s.isalpha()
     - s.rstrip()
 
-*** 列表 [1,3]
+*** List
     - L.append(x)
     - L.pop(x) 移除某一项
     - L.sort()
     - L.reverse() 倒序
-*** 字典 {'foo':'spn'}
-    - D.keys()
-    - sorted(D) 返回排好序的键组
-*** 元组 (2,1,'ha')
+*** Tuple
     - T.index(x)
     - T.count(x) 统计
-*** 文件 open('filename','r')
-    - f=open(x,'w')
-    - f.write('hello')
-    - f.close()
-*** 集合 set('abc'),{'a','c'}
-*** 编程单元 函数,模块,类
-*** 语句表达
+*** Dictionary
+    - D.keys()
+    - sorted(D) 返回排好序的键组
+*** set
+    集合 ('abc'),{'a','c'}
+*** 生成器
     #+begin_src py
     nums=[1,2,4,9]
     print([ n+1 for n in nums])
     #+end_src
+*** 类型转换
 
+- int(x [,base])
+- long(x [,base])
+- float(x)
+- str(x)
+- tuple(s)
+- list(s)
+- set(s)
+- dict(d) d 必须是一个序列 (key,value)元组。
+- frozenset(s)  转换为不可变集合
+- chr(x) 将一个整数转换为一个字符
+- unichr(x) 将一个整数转换为Unicode字符
+- ord(x) 将一个字符转换为它的整数值
+- hex(x) 将一个整数转换为一个十六进制字符串
+- oct(x) 将一个整数转换为一个八进制字符串
+*** 运算符
+**** 成员运算符 
+     - in
+     - not in
+**** 身份运算符
+     引用同一对象
+     - is  x is y ,类似 id(x) == id(y)
+     - is not  类似 id(x) != id(y)
+** 类型与对象 
+*** 类型 
+    #+begin_src python
+      class ClassName:
+          '类的帮助信息'   #类文档字符串
+          class_suite  #类体
+    #+end_src
+
+    #+begin_src python
+      "创建 Employee 类的第一个对象"
+      emp1 = Employee("Zara", 2000)
+    #+end_src
+**** 对象销毁
+     Python 使用了引用计数这一简单技术来跟踪和回收垃圾。
+     当对象被创建时， 就创建了一个引用计数
+**** 继承
+     #+begin_src python
+              class 派生类名(基类名)
+              class SubClassName (ParentClass1[, ParentClass2, ...]):
+     #+end_src
+**** 类属性与方法
+***** 类的私有属性 
+      __private_attrs：两个下划线开头，声明该属性为私有，不能在类的外部被使用或直接访问。在类内部的方法中使用时 self.__private_attrs。
+***** 类的私有方法
+      __private_method：两个下划线开头，声明该方法为私有方法，不能在类的外部调用。在类的内部调用 self.__private_methods
+*** 引用与复制
+*** 表示数据的内置类型
+*** 表示程序结构的内置类型
+*** 解释器内部使用的内置类型
+*** 对象行为与特殊方法
+** 函数，模块，包与分发
+*** 函数
+#+begin_src python
+    def fun():
+        # statement...
+        [return ]
+#+end_src
+    
+*** 模块
+    一个python文件就是一个模块  
+    一个包含模块的文件夹也是一个模块
+
+    import ${module_name} # module_name 就是模块文件的名称,不加后缀 .py
+    from ${module_namespace} import ${module_name} #从模块空间导入某个模块
+** 测试、调试
+** 查看物的信息
+  > 查看物的信息 type
+* 库
+** 内置函数 
+** 运行时服务
+*** os and sys
+    - 显示模块搜索路径  sys.path
+    - 显示加载的模块 print(sys.modules)
+    - 路径合理化 os.path.normpath
+    - 绝对路径 abspath
+    - 运行程序 os.system('python helloshell.py')
+    - 把进程赋予变量 output = os.popen('python helloshell.py').read()
+    - 环境变量 os.environ                                                                 
+    - 运行程序 os.system, os.popen, os.execv, os.spawnv                                  
+    - 进程处理  os.fork, os.pipe, os.waitpid, os.kill                                    
+    - 文件描述  os.open, os.read, os.write                                              
+    - 文件处理 os.remove, os.rename, os.mkfifo, os.mkdir, os.rmdir                    
+    - 管理员工具 os.getcwd, os.chdir, os.chmod, os.getpid, os.listdir, os.access       
+    - 移植工具 os.sep, os.pathsep, os.curdir, os.path.split, os.path.join  
+    - 路径名称工具 os.path.exists('path'), os.path.isdir('path'), os.path.getsize('path')     
+
+** 数学运算
+*** math
+    - pi
+    - floor 地板
+    - trunc 截断
+*** random
+    - random
+** 字符串和文本处理 
+*** odecs 
+*** re
+    - match 从起始位置开始匹配
+    - search 查找第一个
+    - fullmath 完全一样
+    - split 用pattern 截断
+    - findall
+
+    #+begin_src py
+    match=re.match('/(.*)/(.*)/(.*)','/user/var/hello')
+    print(match.groups())
+    #+end_src
+
+    #+begin_example
+    返回 ('user', 'var', 'hello')
+    #+end_example
+*** string
+** 数据库
+** 文件和目录处理
+*** bz2 
+*** filecmp
+*** fnmatch
+*** glob
+*** gzip
+*** shutil
+*** tarfile
+*** tempfile
+*** zipfile
+*** zlib
+** 操作系统服务
+*** commands 
+*** ConfigParser 、configparser
+*** datetime
+**** date
+**** time
+**** datetime
+**** timedelta
+*** errno
+*** fcntl
+*** io
+*** logging
+*** mmap
+*** msvcrt
+*** optparse
+*** signal
+*** subprocess
+*** time
+*** winreg
 ** 进程  
 *** 创建进程
     Process([group [, target [, name [, args [, kwargs]]]]])
@@ -325,14 +474,89 @@
     写进 Queue 的值为：四点水
     从 Queue 读取的值为：四点水
     ```
-** 查看物的信息
-  > 查看物的信息 type
-* 系统  
-| 指令             | 功能     |
-|------------------+----------|
-| raise SystemExit | 退出程序 |
-|                  |          |
-* 语言配套工具
+** 线程与并发性
+*** multiprocessing
+**** 进程 
+**** 进程间通信
+**** 进程池
+**** 共享数据与同步
+**** 托管对象
+**** 连接
+*** threading
+**** Thread
+**** Timer
+**** Lock
+**** RLock
+**** 信号量与有边界的信号量
+**** 事件
+**** 条件变量
+**** 使用Lock
+**** 线程终止与挂起
+*** queue、Queue
+*** 协程与微线程
+** 网络编程与套接字
+*** 网路编程基础 
+*** asynchat
+*** asynncore
+*** select
+*** socket
+**** 地址族
+**** 套接字类型
+**** 寻址
+**** 函数
+**** 异常
+**** 示例
+*** ssl
+*** SocketServer
+** Internet 编程
+*** ftplib
+*** http
+**** http.client 
+**** http.server
+**** http.cookie
+**** http.cookiejar
+*** smtplib
+*** urllib
+*** xmlrpc
+** Web编程
+*** cgi
+*** cgitb
+*** wsgiref
+*** webbrowser
+** Internet数据处理与编码
+*** base64
+*** binascii
+*** csv
+*** email
+*** hashlib
+*** hmac
+*** HtMLParser
+*** json
+*** mimetypes
+*** quopri
+*** xml
+** 其它库
+*** Python服务
+*** 国际化
+*** 多媒体
+** 扩展与嵌入
+*** 扩展模块
+*** 嵌入Python解释器
+* python项目的通用创建方法     
+  1 .Create and configure virtualenv for your project, before using pip. This is
+  the most Pythonic way (创建一个虚拟环境)
+  
+  Try to install Django using built-in pip module:
+
+2.python -m pip install django  (可以显示django 的安装路径)
+
+This command should install packages into site-packages directory.
+
+3.You may also add dist-packages to your PYTHONPATH. (把 site-packages 添加到路径变量里面)
+
+This question should help you: How to globally modify the default PYTHONPATH (sys.path)? (这个是其他方法)
+
+* 工具
 ** 虚拟环境 virtualenv 管理包
    环境，就是用某个环境的工具执行代码喽，激活了环境记得关闭此环境哦
     
@@ -398,55 +622,10 @@
    # 然后再不需要去手动激活了
    使用 pyenv 来管理多版本的 python 命令，使用 pyenv-virtualenv 插件来管理多版本
    python 包环境。爽歪歪~
-* 模块
-** math
-   - pi
-   - floor 地板
-   - trunc 截断
-** random
-   - random
-** re
-   - match 从起始位置开始匹配
-   - search 查找第一个
-   - fullmath 完全一样
-   - split 用pattern 截断
-   - findall
 
-   #+begin_src py
-   match=re.match('/(.*)/(.*)/(.*)','/user/var/hello')
-   print(match.groups())
-   #+end_src
+* pip
+** 包的安装路径
+  pip show PACKAGENAME
+ 一般情况下，包总是被安装在python安装目录下的lib\site-packages\包名\
 
-   #+begin_example
-   返回 ('user', 'var', 'hello')
-   #+end_example
-
-** os and sys
-   - 显示模块搜索路径  sys.path
-   - 显示加载的模块 print(sys.modules)
-   - 路径合理化 os.path.normpath
-   - 绝对路径 abspath
-   - 运行程序 os.system('python helloshell.py')
-   - 把进程赋予变量 output = os.popen('python helloshell.py').read()
-   - 环境变量 os.environ                                                                 
-   - 运行程序 os.system, os.popen, os.execv, os.spawnv                                  
-   - 进程处理  os.fork, os.pipe, os.waitpid, os.kill                                    
-   - 文件描述  os.open, os.read, os.write                                              
-   - 文件处理 os.remove, os.rename, os.mkfifo, os.mkdir, os.rmdir                    
-   - 管理员工具 os.getcwd, os.chdir, os.chmod, os.getpid, os.listdir, os.access       
-   - 移植工具 os.sep, os.pathsep, os.curdir, os.path.split, os.path.join  
-   - 路径名称工具 os.path.exists('path'), os.path.isdir('path'), os.path.getsize('path')     
-
-* python项目的通用创建方法     
-  1 .Create and configure virtualenv for your project, before using pip. This is
-  the most Pythonic way (创建一个虚拟环境)
-  
-  Try to install Django using built-in pip module:
-
-2.python -m pip install django  (可以显示django 的安装路径)
-
-This command should install packages into site-packages directory.
-
-3.You may also add dist-packages to your PYTHONPATH. (把 site-packages 添加到路径变量里面)
-
-This question should help you: How to globally modify the default PYTHONPATH (sys.path)? (这个是其他方法)
+ 
