--- a/TodoList.org
+++ b/TodoList.org
@@ -1,3 +1,10 @@
+老先生严重缺乏维生素，所以影响视力听力骨骼关节和其它健康因素。给他吃一顿爆炒羊肝
+片，或者两瓶多种维生素可以极大缓解眼下的症状，关节肌肉疼痛需要花三十元人民币买一
+些布洛芬服用，常备布洛芬和维生素可以尽量减少他生大病的机会。
+
+
+
+
 * TODO
 ** TODO [早晚]有氧运动5分钟
 ** TODO [早晚]看书1小时
