--- a/agenda/gtd.org
+++ b/agenda/gtd.org
@@ -52,6 +52,18 @@
   
   [2021-09-13 周一 16:56]
 
+** STARTED [#B] 查看中文项目
+   SCHEDULED: <2021-09-14 二>
+   :PROPERTIES:
+   :LAST_REPEAT: [2021-09-14 二 04:11]
+   :END:
+   :LOGBOOK:
+   CLOCK: [2021-09-14 二 04:12]--[2021-09-14 二 04:37] =>  0:25
+   :END:
+  
+   - State "DONE"       from "TODO"       [2021-09-14 二 04:11]
+  [2021-09-14 二 04:10]
+
 * 2021  
 ** 9.1
 *** DONE html5
