--- a/TodoList.org
+++ b/TodoList.org
@@ -3,7 +3,7 @@
 些布洛芬服用，常备布洛芬和维生素可以尽量减少他生大病的机会。
 
 
-
+* TODO 弄自己的博客
 
 * TODO
 ** TODO [早晚]有氧运动5分钟
@@ -15,6 +15,9 @@
 
 
 * TODO List
+* 短期目标                                                         :短期目标:
+** 工资8000  
+** 做个公司
 * Need to do long                                                  :长远目标:
 
 ** TODO 娶妻
