--- a/agenda/gtd.org
+++ b/agenda/gtd.org
@@ -58,6 +58,7 @@
    :LAST_REPEAT: [2021-09-14 二 04:11]
    :END:
    :LOGBOOK:
+   CLOCK: [2021-09-14 周二 15:37]--[2021-09-14 周二 16:02] =>  0:25
    CLOCK: [2021-09-14 二 04:12]--[2021-09-14 二 04:37] =>  0:25
    :END:
   
