--- a/TodoList.org
+++ b/TodoList.org
@@ -3,7 +3,11 @@
 些布洛芬服用，常备布洛芬和维生素可以尽量减少他生大病的机会。
 
 
+素食主义者
+经常吃素
+vegan
 
+What's healthier: a vegan diet or the Mediterranean Diet? Neal Barnard, M.D., clears up the confusion in a presentation from the International Conference on Nutrition in Medicine on Aug. 10, 2018 in Washington, D.C. Learn more about a plant-based diet at PCRM.org.
 
 * TODO
 ** TODO [早晚]有氧运动5分钟
