--- a/agenda/work.org
+++ b/agenda/work.org
@@ -2,7 +2,9 @@
 ** STARTED [#A] 安付管家官网
    SCHEDULED: <2021-09-15 周三>
    :LOGBOOK:
-   CLOCK: [2021-09-15 周三 09:44]
+   CLOCK: [2021-09-16 周四 13:58]--[2021-09-16 周四 14:23] =>  0:25
+   CLOCK: [2021-09-16 周四 08:45]--[2021-09-16 周四 09:10] =>  0:25
+   CLOCK: [2021-09-15 周三 09:44]--[2021-09-16 周四 08:45] => 23:01
    CLOCK: [2021-09-15 周三 09:05]--[2021-09-15 周三 09:30] =>  0:25
    :END:
   
