--- a/TodoList.org
+++ b/TodoList.org
@@ -1,6 +1,7 @@
 * 好的规划，能节省时间
 ** thinkphp 源码解析 
 ** 没有需求，只能给自己创造需求，网上也有需求
+** TODO 把泡沫拿掉，量好尺寸，换桌子上的台布，超市买铺桌子上，10点学习睡觉
 * 程序员
 ** TODO 一天写5个网页
 ** TODO 整理 bootstrap3 网页
