--- a/product/computer/algorithm/algorithm.org
+++ b/product/computer/algorithm/algorithm.org
@@ -1,3 +1,31 @@
+算法，解决问题的方法。
+
+* 问题1
+  
+#+begin_example
+给定两个数组，编写一个函数来计算它们的交集。
+#+end_example
+
+示例:
+输入: nums1 = [ 1,2,2,1] ，nums2=[ 2,3,4]
+
+输出: [2]
+  
+我首先想到的方法就是用 nums1 中的数 和 nums2 中的数 进行 一一对比
+
+#+begin_src python
+  def intersection(nums1,nums2):
+      intersections=[]
+      for num1 in nums1:
+          for num2 in nums2:
+              if(num1==num2):
+                  intersections.push(num1)
+                  continue
+  
+       intersections.uniq()       
+#+end_src
+
+
 * 算法
 ** 数组和矩阵 
 *** 数组中的重复数字 
