--- a/agenda/gtd.org
+++ b/agenda/gtd.org
@@ -62,9 +62,10 @@
    - State "DONE"       from "TODO"       [2021-09-14 二 04:11]
   [2021-09-14 二 04:10]
 
-** TODO [#B] 
+** TODO [#B] java学习
+   SCHEDULED: <2021-10-17 日>
   
-  [2021-09-14 二 20:01]
+  [2021-10-17 日 06:39]
 
 * 2021  
 ** 9.1
