--- a/book.org
+++ b/book.org
@@ -1,3 +1,6 @@
+关于读书，计算机类的书太多太多，计算机软件太多太多，怎么也学不完学不尽。只有多总结，抓住现有的知识，掌握好，才能学习更多新的知识。而且反问下，计算机知识真的这么难学吗？
+
+
 * 标题  (javascript) 小脚本，小巧编程语言 , 小语言
 
   语言的历史，有汉语语系，希腊语系 ，编程语系。用文字符号，表示具体信息。  
