--- a/product/computer/the-art-of-command-line.org
+++ b/product/computer/the-art-of-command-line.org
@@ -1,4 +1,5 @@
 #+title:  命令行的艺术
+#+tags: 在服务器上工作
 https://github.com/jlevy/the-art-of-command-line/blob/master/README-zh.md
 
 如果在某一天，你只能使用命令行表示想法，那么，你应该怎么办？你会把你的想法尽可能简洁的表达出来，避免啰嗦。
@@ -7,7 +8,25 @@ https://github.com/jlevy/the-art-of-command-line/blob/master/README-zh.md
 
 如果你对某些命令不够理解，可以使用 [[https://explainshell.com][Explainshell]] 获取调试型的帮助。
 
-** 基础
-  * 学习 Bash 的基础知识 
+** 基础 
+  - 学习 Bash 的基础知识
+  - 学习vim
+  - 学习使用 man 和 使用 type 确定命令类型
+  - 学会 > < | 这些重定向命令
+  - 学会使用通配符 * ,? [...]
+  - 熟悉任务管理工具 & ,ctrl-z , ctrl-c ,jobs ,fg,bg,kill 等
+  - 学习 ssh 远程登录,ssh-agent,ssh-add 无密码认证登录
+  - 学习基本文件管理  ls ,less ,head ,tail , tail -f ,ln ,ln -s , chown, chmod, du ,df ,mount ,fdisk,mkfs ,lsblk ,ls -i ,df -i
+  - 学习基本网络管理 ip 或 ifconfig ,dig
+  - 学习版本管理  git
+  - 学习正则表达式 grep  , 参数 -i , -o , -v, -A , -B , -c
+  - 学习 apt-get ,yum ,dnf 或 pacman, pip (python)
 
 
+
+  
+** 日常使用
+   - 使用 Tab键补全, ctrl-r 查找历史
+   - set -o vi vi风格快捷键， set -o emacs
+   - 为了便于编辑长命令，当设置默认编辑器后 （export EDITOR=vim） , ctrl-x ctrl-e 可以调出编辑器
+   - history 调出命令历史 , !n 执行命令编号
