--- a/product/computer/frame/php/06.0.网络基础.md
+++ b/product/computer/frame/php/06.0.网络基础.md
@@ -1,19 +1,16 @@
-#网络协议
+# 网络协议
+### TCP/IP的基本概念
 
-###TCP/IP的基本概念
-
-#####1、分层
+##### 1、分层
 
 TCP/IP通常是被分成四层协议系统的，应用层（Telnet、FTP和Email等）、运输层（TCP、UDP）、网络层（IP、ICMP、IGMP等）和链路层（设备驱动程序），每一层各司其职，下层对上层来说，是透明的。
     
-![](http://oc9orpe44.bkt.clouddn.com/17-2-17/3786679-file_1487311785907_11bdb.png)
     上图是局域网上运行的FTP两台主机，在同一层上，双方都有对应的一个或多个协议进行通信。首先认识一下TCP/IP协议。
     TCP/IP通常指的是TCP/IP协议簇，是一组不同的协议组合在一起勾成的协议簇，上图中列举了四种不同层次的协议，F T P是一种应用层协议， T C P是一种运输层协议，I P是一种网络层协议，而以太网协议则应用于链路层上。
     在T C P / I P协议族中，网络层 I P提供的是一种不可靠的服务。也就是说，它只是尽可能快地把分组从源结点送到目的结点，但是并不提供任何可靠性保证。而另一方面， T C P在不可靠的I P层上提供了一个可靠的运输层。为了提供这种可靠的服务， T C P采用了超时重传、发送和接收端到端的确认分组等机制。
     
 #####2、互联网的地址
 互联网上每个接口都必须有一个唯一的Internet地址即IP地址，IPV4的地址长度是32bit，如下图分成五类：
-![](http://oc9orpe44.bkt.clouddn.com/17-2-17/48558785-file_1487312002107_4bfe.png)
     - A类地址范围：0.0.0.0~127.255.255.255，
     - B类地址范围：128.0.0.0~191.255.255.255，
     - C类地址范围：192.0.0.0~223.255.255.255，
