--- a/我的方向是技术，要一直给自己加油打气.org
+++ b/我的方向是技术，要一直给自己加油打气.org
@@ -1,3 +1,14 @@
-自学计算机技术，并且交流，开源
+* 怎样迅速学到知识 (百度不是解决问题的正确方法，正确方法是自己先思考）
+- 书本的知识是不会脱离世界的本质的(并非神秘，既然不神秘，就不会非常难，是能够思考从而理解的，是这种逻辑）
+- 看书，电子书或纸质书，拿只笔，看过的都划掉。（做记号）  
+- 
+- 问自己怎么解决问题
+- 自己解决问题
+  
+* 怎么挣钱
+  - 解决别人的问题 
+* 思考人生的方向
+* 自学计算机技术，并且交流，开源
+
 没人帮你，只能自己帮自己。
 只帮强者
