--- a/book.org
+++ b/book.org
@@ -1,20 +1,10 @@
-关于读书，计算机类的书太多太多，计算机软件太多太多，怎么也学不完学不尽。只有多总结，抓住现有的知识，掌握好，才能学习更多新的知识。而且反问下，计算机知识真的这么难学吗？
-
-
-* 标题  (javascript) 小脚本，小巧编程语言 , 小语言
-
-  语言的历史，有汉语语系，希腊语系 ，编程语系。用文字符号，表示具体信息。  
-
-  web设计师，设计网络页面，是一种美工的工种，美工设计好后，由文字工作者对内容进行加工。
-  web设计师是一种特殊的加工方式，加工美学。
-  
-  网页内容的设计，原来是一体的，因为美学的结构越来越复杂，变成分体的了。
-
-  分为内容设计，美学设计，还有逻辑设计 (javascript) 。
-
-  
-  
-  
+* 经历
+  1、先把基础学好，基础很重要 ，大一会开 C 语言，一定得好好学
+  2、在一的基础上可以开始提前学 java，有了一的基础，学 java 很快，java 基础同样的一定得学好，先不要管那些框架，java 基础一定得打牢
+  3、大二会开数据结构预算法，这个不用多说，算法是程序员的内功，同时建议大二把数据库学完
+  4、1、2、3 都 ok 了可以学框架了,ssm 必学，学完之后看下 springboot
+  5、目前你的基础已经足够你支撑学习任何新东西了，建议先多写一些自己感兴趣的小项目，代码一定得多写，同时 linux 也要折腾下，怎么把本地项目部署到云服务器上
+  6、如果前面都做到了，那么 ok，你本科已经毕业了，可以开始找工作了
 
   
 
