--- a/product/computer/计算机.org
+++ b/product/computer/计算机.org
@@ -1,13 +1,11 @@
 * 计算机
- 一个机器，能够自动化的，可编程的机器 ，辅助人的生活。
+ 机器中的芯片，起到控制机器的作用
  
-** 历史
-- 最早的辅助计算的工具  算盘  ,一定计算规模的数字运算超出人的心算能力
-- 最早期，"Computer" 指负责计算的人
-   
-** 布尔逻辑和逻辑门
-  实现 
-  1. 继电器
-  2. 晶体管
+ - 控制方式越来越智能，复杂
+** 机械式芯片 
+** 电算芯片 
+*** 布尔逻辑和逻辑门
+*** 电路与布尔逻辑的关系
+ - 1. 继电器
+ - 2. 晶体管
 
-     
