--- a/关于人/人.org
+++ b/关于人/人.org
@@ -9,3 +9,16 @@
 个人成长的标准是： 帮自己解决问题
 
 解决问题的方法是： 先自我思考，不会的可以网络查找。
+
+日常工作/生活的心态是：乐观积极 (容易满足，用心体验）
+
+运动的好处是全方面的。
+
+
+** 如何去改变
+ ABC理论。
+ A代表情感情绪：强化高峰体验，提供情感动力。
+ B代表行为行动：走出自己的舒适区，做你害怕的事，害怕就会消失。
+ C代表认知、思维 ：认识到自己脑子中存在不少根深蒂固但未必正确的观念。
+
+ 
