--- a/计算机/计算机.org
+++ b/计算机/计算机.org
@@ -3,6 +3,15 @@
 
  现在表示能解决问题的机器
 
+* 程序分类
+
+** 客户端程序
+   
+  所有处理都在客户端运行，无需网络 
+** 服务端程序
+
+  所有处理都到通过网络传送到一个中心服务器，所以需要有网络地址 URI 和 处理参数 
+  
 * 计算机从业人员  
   计算机庞大，分工细化 
 ** 硬件 
