--- a/关于人/人.org
+++ b/关于人/人.org
@@ -14,11 +14,14 @@
 
 运动的好处是全方面的。
 
+个人在社会中，在阶级里，在政府管控下，是受到压迫的。
+
+通货膨胀，生活的成本会增长，这是趋势。
 
 ** 如何去改变
- ABC理论。
- A代表情感情绪：强化高峰体验，提供情感动力。
- B代表行为行动：走出自己的舒适区，做你害怕的事，害怕就会消失。
- C代表认知、思维 ：认识到自己脑子中存在不少根深蒂固但未必正确的观念。
+ ABC理论
+-  A代表情感情绪：强化高峰体验，提供情感动力。
+-  B代表行为行动：走出自己的舒适区，做你害怕的事，害怕就会消失。
+- C代表认知、思维 ：认识到自己脑子中存在不少根深蒂固但未必正确的观念。
 
  
