--- a/计算机/计算机.org
+++ b/计算机/计算机.org
@@ -3,8 +3,26 @@
 
  现在表示能解决问题的机器
 
-* 程序分类
+* 技术历程
+ 
+** 处理器
+  控制数据，数据用电量表示，二进制形式(稳定，抗干扰强）。 
+  
+ 1. 继电器 (电磁式，热敏干簧，固态式，电流式)
+ 2. 真空管 (真空三级管）
+ 3. 电子管 (半导体晶体管）
+ 4. 集成电路 (PCB 印刷电路板 --> 光刻晶体管 --> IC 集成电路）
 
+** 显示的发展
+   打印机 --> 显示器 --> GUI --> 桌面概念  -->  窗口概念 (按钮，文本框，菜单... 组件） 
+
+   光标 -> 鼠标
+
+   图像
+
+   文字处理
+   
+* 程序分类
 ** 客户端程序
    
   所有处理都在客户端运行，无需网络 
@@ -15,7 +33,7 @@
 * 计算机从业人员  
   计算机庞大，分工细化 
 ** 硬件 
-
+   
 ** 软件
 
 *** 各平台软件工程师
