--- a/计算机/计算机网络.org
+++ b/计算机/计算机网络.org
@@ -1,7 +1,11 @@
 * 计算机网络
-计算机网络指的是，把能解决某一方面问题的机器通过网这个介质集合起来，互相帮助。
-  
-** OSI 协议参考
+计算机网络: 数据进行传输
+
+网络协议: 数据能够顺畅传输的标准。 
+
+协议族: 一系列协议 (传送芝麻一套标准，传输西瓜另一套标准）
+
+** OSI 协议族
    - 应用层 (针对每个应用的协议)
    - 表示层 ( 接收不同表示形式的信息，如文字流，图像，声音等)
    - 会话层 (何时建立连接，何时断开连接及连接保持)
@@ -10,32 +14,42 @@
    - 数据链路层 (数据帧与比特流之间切换)
    - 物理层 (比特流与电子信号之间的切换）
 ** TCP/IP 协议族
-- 应用层协议
-- 传输层
-- 网络层
-- 数据链路层
-- 物理层
-
-  IPv4 地址 和子网掩码 
+*** 分层 
+ - 应用层协议 (文件层)
+ - 传输层
+ - 网络层
+ - 数据链路层
+ - 物理层
 
   
-  A 类 11111111. 00000000. 00000000. 00000000
-  B 类 11111111. 11111111. 00000000. 00000000
-  C 类 11111111. 11111111. 11111111. 00000000
+ 在TCP / IP协议族中，网络层 IP提供的是一种不可靠的服务。也就是说，它只是尽可能快地把分组从源结点送到目的结点，但是并不提供任何可靠性保证。
+ 而另一方面， TCP在不可靠的IP层上提供了一个可靠的运输层。为了提供这种可靠的服务， TCP采用了超时重传、发送和接收端到端的确认分组等机制。
+*** 互联网地址 
+    - A类地址范围：0.0.0.0~127.255.255.255，
+    - B类地址范围：128.0.0.0~191.255.255.255，
+    - C类地址范围：192.0.0.0~223.255.255.255，
+    - D类地址范围：224.0.0.0~239.255.255.255，
+    - E类地址范围：240.0.0.0~247.255.255.255.
+      
+   私有地址 
+   10.0.0.0 ~ 10.255.255.255 (10/8) A 类
+   172.16.0.0 ~ 172.31.255.255( 172.16/12) B 类
+   192.168.0.0 ~ 192.168.255.255 (192.168/16) C 类
 
-  置 1 是掩掉的，访问不到的。
+   IPv6 (128 位)
 
-  私有地址 
-  10.0.0.0 ~ 10.255.255.255 (10/8) A 类
-  172.16.0.0 ~ 172.31.255.255( 172.16/12) B 类
-  192.168.0.0 ~ 192.168.255.255 (192.168/16) C 类
+   FFFF:FFFF:FFFF:FFFF:FFFF:FFFF:FFFF:FFFF
+*** 域名系统
+    
+   提供 IP 与 主机名的映射 
+*** 端口号 
 
-  IPv6 (128 位)
-
-  FFFF:FFFF:FFFF:FFFF:FFFF:FFFF:FFFF:FFFF
+    TCP和 UDP 使用 16 位端口号来识别应用程序
+    
 ** IP 辅助技术
    仅凭 IP 无法单独工作
 *** DNS
 *** ARP
 *** ICMP
 *** DHCP
+** HTTP
