--- a/计算机/设计工具/java/java.org
+++ b/计算机/设计工具/java/java.org
@@ -1,9 +1,11 @@
-# java语言和程序
-## java 程序的执行
+* java
+  
+  
+** java 程序的执行
 - 编译  javac JAVASRC
 - 执行 java JAVACLASS
 
-## java 语言的内容
+** java 语言的内容
 ``` java
 class HelloWorld{
     public static void main(String[] args){
@@ -23,17 +25,17 @@ class HelloWorld{
 - 2. 语句块由语句组成，而语句由 名词+动词/操作符 组成
 - 3. 这就是 java语言的全部内容
 
-## For-Each 
+** For-Each 
 ``` java
 for(int i: nums){
 }
 ```
-## 包
+** 包
 ``` java
 package aa.bb;
 import aa.bb.*;
 ```
-## 继承 extends
+** 继承 extends
 中断继承  final
 抽象类 abstract
 接口 interface
@@ -62,8 +64,8 @@ class 类名 implements 接口 1,接口 2
 
 ```
 
-# java
-## Number & Math 类
+* java
+** Number & Math 类
 | 方法        | 描述                                                                                                                                              |
 |-------------+---------------------------------------------------------------------------------------------------------------------------------------------------|
 | xxxValue()  | 将 Number 对象转换为xxx数据类型的值并返回。                                                                                                       |
@@ -94,7 +96,7 @@ class 类名 implements 接口 1,接口 2
 | toRadians() | 将角度转换为弧度。                                                                                                                                |
 | random()    | 返回一个随机数。                                                                                                                                  |
 
-## Character
+** Character
 
 | 方法           | 描述                                    |
 |----------------+-----------------------------------------|
@@ -107,7 +109,7 @@ class 类名 implements 接口 1,接口 2
 | toLowerCase()  | 指定字母的小写形式                      |
 | toString()     | 返回字符的字符串形式，字符串的长度仅为1 |
 
-## String 
+** String 
 
 | 方法                  | 描述                                                                                                                     |
 |-----------------------+--------------------------------------------------------------------------------------------------------------------------|
@@ -161,7 +163,7 @@ class 类名 implements 接口 1,接口 2
 | isEmpty()             | 判断字符串是否为空。                                                                                                     |
 
 
-## StringBuffer
+** StringBuffer
 | 方法                                                              | 描述                                                                 |
 |-------------------------------------------------------------------+----------------------------------------------------------------------|
 | public StringBuffer append(String s)                              | 将指定的字符串追加到此字符序列。                                     |
@@ -187,8 +189,8 @@ class 类名 implements 接口 1,接口 2
 | String toString()                                                 | 返回此序列中数据的字符串表示形式。                                   |
 
 
-## 对象
-### 小段字符串拼接 StringBuilder
+** 对象
+*** 小段字符串拼接 StringBuilder
 ```
  StringBuilder sb = new StringBuilder();
  sb.append('a');
@@ -203,7 +205,7 @@ class 类名 implements 接口 1,接口 2
  
 ```
 
-### 输入 Scanner
+*** 输入 Scanner
 ```
  Scanner sc = new Scanner(System.in);
  String nl = sc.nextLine();
@@ -215,13 +217,13 @@ class 类名 implements 接口 1,接口 2
  double d = sc.nextDouble();
  System.out.println("double数字是" + d);
 ```
-### 输入密码 Console
+*** 输入密码 Console
 ```
  Console c = System.console();
  String username = c.readLine("请输入用户名");
  char[] passwd = c.readPassword("请输入密码");
 ```
-### 文件输入与输出
+*** 文件输入与输出
 ```
 try {
     //读取文件
@@ -241,8 +243,8 @@ try {
 }
 ``` 
 
-# 面向对象，而不是面向过程
-## 类路径 (不同的类有不同的编译程序，分开来的)
+* 面向对象，而不是面向过程
+** 类路径 (不同的类有不同的编译程序，分开来的)
 类路径的设置使用 : (冒号)分隔
 如 
 ```
@@ -254,13 +256,13 @@ try {
 ```
 /home/user/classdir:.:/home/user/archives/'*'
 ```
-## 设置类路径 (-classpath / -cp)
+** 设置类路径 (-classpath / -cp)
 ```
 java -classpath /home/user/classdir:.:/home/user/archives/archive.jar MyProg
 ```
 
-## 继承 (extends) 与阻止继承 (final)
-## 泛型数组 ArrayList<Type>
+** 继承 (extends) 与阻止继承 (final)
+** 泛型数组 ArrayList<Type>
 方法 
 - add
 - size
